--- a/store/mcr-002/mcr-002.css
+++ b/store/mcr-002/mcr-002.css
@@ -3,7 +3,7 @@
   padding: 50px;
   background-color: #f3f4f6;
   width: 100%;
-  height: 1145px;
+  height: 75vh;
 }
 
 .product-content-container {
@@ -16,9 +16,12 @@
 }
 
 .product-image {
-  width: 866px;
-  height: 866px;
+  width: clamp(0px, 50vw, 750px);
+  height: clamp(0px, 50vw, 750px);
+  aspect-ratio: 1;
   border: solid 4px #0B1215;
+  margin: 0;
+  padding: 0;
 }
 
 .product-image img {
@@ -30,6 +33,8 @@
 .product-details-container {
   display: flex;
   flex-direction: column;
+  margin: 0;
+  padding: 0;
 }
 
 .product-title {
@@ -37,7 +42,8 @@
   font-weight: 400;
   font-size: 72px;
   color: #0B1215;
-  margin-bottom: -15px;
+  margin: 0;
+  padding: 0;
 }
 
 .product-artist {
@@ -46,7 +52,8 @@
   font-style: italic;
   font-size: 40px;
   color: #0B1215;
-  margin-bottom: 40px;
+  margin: 0;
+  padding: 0;
 }
 
 .release-date {
@@ -55,11 +62,14 @@
   font-style: normal;
   font-size: 24px;
   color: #0B1215;
-  margin-bottom: 10px;
+  margin: 0;
+  padding: 0;
 }
 
 .separator {
   border-top: 3px solid #0B1215;
+  margin: 0;
+  padding: 0;
 }
 
 .price-and-button {
@@ -67,7 +77,8 @@
   flex-direction: row;
   align-items: center;
   gap: 200px;
-  margin: 30px 0;
+  margin: 0;
+  padding: 0;
 }
 
 .product-price {
@@ -76,15 +87,20 @@
   font-style: italic;
   font-size: 72px;
   color: #0B1215;
+  margin: 0;
+  padding: 0;
 }
 
 .product-buy-button {
   position: relative;
   top: -10px;
+  margin: 0;
+  padding: 0;
 }
 
 .track-list {
-  margin: 50px 0;
+  margin: 0;
+  padding: 0;
 }
 
 .track-list h3 {
@@ -93,7 +109,8 @@
   font-style: italic;
   font-size: 48px;
   color: #0B1215;
-  margin-bottom: 20px;
+  margin: 0;
+  padding: 0;
 }
 
 .track-list ol {
@@ -101,10 +118,10 @@
   font-weight: 500;
   font-style: normal;
   font-size: 24px;
-  margin-left: 55px;
   color: #0B1215;
   line-height: 1.3;
-  margin-bottom: 10px;
+  margin: 0;
+  padding: 0;
 }
 
 .pressing-info h3 {
@@ -113,7 +130,8 @@
   font-style: italic;
   font-size: 24px;
   color: #0B1215;
-  margin: 20px 0;
+  margin: 0;
+  padding: 0;
 }
 
 .pressing-info p {
@@ -123,6 +141,8 @@
   font-size: 24;
   line-height: 1.8;
   color: #0B1215;
+  margin: 0;
+  padding: 0;
 }
 
 .wide-separator {
