--- a/store/mcr-002/mcr-002.css
+++ b/store/mcr-002/mcr-002.css
@@ -1,23 +1,27 @@
 /* Product Section */
 .product-section {
-  padding: 50px;
+  padding: 60px;
   background-color: #f3f4f6;
-  width: 100%;
-  height: 75vh;
+  width: 100vw;
+  height: 1000px;
+  overflow: hidden; /* Prevent overflow of content */
 }
 
 .product-content-container {
   display: flex;
   flex-direction: row;
-  gap: 50px;
+  gap: 100px;
   width: 100%;
-  height: 95%;
+  height: 100%;
   justify-content: center;
+  margin: 0;
+  padding-bottom: 40px;
+  align-items: center;
 }
 
 .product-image {
-  width: clamp(0px, 50vw, 750px);
-  height: clamp(0px, 50vw, 750px);
+  width: clamp(0px, 50vw, 650px);
+  height: clamp(0px, 50vw, 650px);
   aspect-ratio: 1;
   border: solid 4px #0B1215;
   margin: 0;
@@ -33,34 +37,40 @@
 .product-details-container {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
   margin: 0;
   padding: 0;
+  line-height: 1;
 }
 
 .product-title {
   font-family: "ringold-sans", sans-serif;
   font-weight: 400;
-  font-size: 72px;
+  font-size: 80px;
   color: #0B1215;
   margin: 0;
   padding: 0;
+  line-height: 0.9;
 }
 
 .product-artist {
   font-family: "coolvetica", sans-serif;
   font-weight: 400;
   font-style: italic;
-  font-size: 40px;
+  font-size: 36px;
   color: #0B1215;
   margin: 0;
   padding: 0;
+  line-height: 0.9;
 }
+
 
 .release-date {
   font-family: "articulat-cf", sans-serif;
   font-weight: 500;
   font-style: normal;
-  font-size: 24px;
+  font-size: 18px;
   color: #0B1215;
   margin: 0;
   padding: 0;
@@ -76,26 +86,34 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  gap: 200px;
+  gap: 2vw;
   margin: 0;
   padding: 0;
+  align-self: left;
+  align-content: center;
 }
 
 .product-price {
   font-family: "coolvetica", sans-serif;
   font-weight: 400;
   font-style: italic;
-  font-size: 72px;
+  font-size: 54px;
   color: #0B1215;
   margin: 0;
   padding: 0;
+  line-height: 1;
 }
 
 .product-buy-button {
-  position: relative;
-  top: -10px;
-  margin: 0;
-  padding: 0;
+  margin-bottom: 20px;
+}
+
+#product-add-to-cart iframe {
+}
+
+
+button {
+  transform-origin: center;
 }
 
 .track-list {
@@ -107,9 +125,9 @@
   font-family: "coolvetica", sans-serif;
   font-weight: 400;
   font-style: italic;
-  font-size: 48px;
+  font-size: 36px;
   color: #0B1215;
-  margin: 0;
+  margin-bottom: 20px;
   padding: 0;
 }
 
@@ -117,11 +135,11 @@
   font-family: "articulat-cf", sans-serif;
   font-weight: 500;
   font-style: normal;
-  font-size: 24px;
+  font-size: 20px;
   color: #0B1215;
   line-height: 1.3;
-  margin: 0;
-  padding: 0;
+  list-style-position: inside;
+  padding-left: 40px;
 }
 
 .pressing-info h3 {
@@ -130,7 +148,7 @@
   font-style: italic;
   font-size: 24px;
   color: #0B1215;
-  margin: 0;
+  margin-bottom: 10px;
   padding: 0;
 }
 
@@ -138,7 +156,7 @@
   font-family: "articulat-cf", sans-serif;
   font-weight: 500;
   font-style: normal;
-  font-size: 24;
+  font-size: 16px;
   line-height: 1.8;
   color: #0B1215;
   margin: 0;
@@ -147,7 +165,7 @@
 
 .wide-separator {
   width: 100%;
-  margin-top: 40px;
+  margin-top: 20px;
 }
 
 /* Description Section */
