--- a/home.css
+++ b/home.css
@@ -203,6 +203,26 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.default-image {
+  opacity: 1;
+}
+
+.hover-image {
+  opacity: 0;
+}
+
+.merch-block:hover .default-image {
+  opacity: 0;
+}
+
+.merch-block:hover .hover-image {
+  opacity: 1;
 }
 
 .merch-block-details-container {
@@ -442,6 +462,32 @@
   .merch-block {
     font-size: clamp(15px, 125%, 16px);
     /* border: 3px solid #0B1215; */
+  }
+
+  .merch-block:hover .default-image {
+    opacity: 1;
+  }
+
+  .merch-block:hover .hover-image {
+    opacity: 0;
+  }
+
+  .merch-block .default-image {
+    opacity: 1;
+    transition: opacity 0.3s ease-in-out;
+  }
+
+  .merch-block .hover-image {
+      opacity: 0;
+      transition: opacity 0.3s ease-in-out;
+  }
+
+  .merch-block.scrolled .default-image {
+      opacity: 0;
+  }
+
+  .merch-block.scrolled .hover-image {
+      opacity: 1;
   }
 
   .merch-block-details-container {
