--- a/store/mcr-002/mcr-002.css
+++ b/store/mcr-002/mcr-002.css
@@ -10,12 +10,12 @@
 .product-content-container {
   display: flex;
   flex-direction: row;
-  gap: 100px;
+  gap: clamp(5px, 5vw, 300px);
   width: 100%;
   height: 100%;
   justify-content: center;
   margin: 0;
-  padding-bottom: 40px;
+  padding: 0;
   align-items: center;
 }
 
@@ -37,8 +37,8 @@
 .product-details-container {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  height: 100%;
+  gap: clamp(4px, 0.6vw, 40px);
+  height: auto;
   margin: 0;
   padding: 0;
   line-height: 1;
@@ -52,6 +52,7 @@
   margin: 0;
   padding: 0;
   line-height: 0.9;
+  transition: font-size 0.3s ease;
 }
 
 .product-artist {
@@ -62,7 +63,14 @@
   color: #0B1215;
   margin: 0;
   padding: 0;
-  line-height: 0.9;
+  line-height: 0.5;
+  transition: font-size 0.3s ease;
+}
+
+.whitespace {
+  display: block;
+  height: 9px;
+  width: 100%;
 }
 
 
@@ -74,6 +82,7 @@
   color: #0B1215;
   margin: 0;
   padding: 0;
+  transition: font-size 0.3s ease;
 }
 
 .separator {
@@ -86,7 +95,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  gap: 2vw;
+  gap: clamp(1px, 4vw, 40px);
   margin: 0;
   padding: 0;
   align-self: left;
@@ -102,6 +111,7 @@
   margin: 0;
   padding: 0;
   line-height: 1;
+  transition: font-size 0.3s ease;
 }
 
 .product-buy-button {
@@ -111,14 +121,10 @@
 #product-add-to-cart iframe {
 }
 
-
-button {
-  transform-origin: center;
-}
-
 .track-list {
   margin: 0;
   padding: 0;
+  transition: font-size 0.3s ease;
 }
 
 .track-list h3 {
@@ -127,8 +133,9 @@ button {
   font-style: italic;
   font-size: 36px;
   color: #0B1215;
-  margin-bottom: 20px;
+  margin: 0;
   padding: 0;
+  transition: font-size 0.3s ease;
 }
 
 .track-list ol {
@@ -139,7 +146,9 @@ button {
   color: #0B1215;
   line-height: 1.3;
   list-style-position: inside;
-  padding-left: 40px;
+  margin: 0;
+  padding: 0;
+  transition: font-size 0.3s ease;
 }
 
 .pressing-info h3 {
@@ -148,8 +157,9 @@ button {
   font-style: italic;
   font-size: 24px;
   color: #0B1215;
-  margin-bottom: 10px;
+  margin: 0;
   padding: 0;
+  transition: font-size 0.3s ease;
 }
 
 .pressing-info p {
@@ -161,6 +171,7 @@ button {
   color: #0B1215;
   margin: 0;
   padding: 0;
+  transition: font-size 0.3s ease;
 }
 
 .wide-separator {
@@ -302,4 +313,106 @@ button {
 
 .merch-link:hover {
   cursor: pointer;
+}
+
+/* Laptop Media Query */
+@media (max-width: 1280px) {
+  .product-section {
+    padding: 60px 40px;
+  }
+
+  .product-content-container {
+    gap: clamp(10px, 3vw, 300px);
+  }
+  
+  .product-image {}
+  
+  .product-image img {}
+  
+  .product-details-container {}
+  
+  .product-title {
+    font-size: 66px;
+  }
+  
+  .product-artist {
+    font-size: 32px;
+  }
+  
+  .release-date {
+    font-size: 16px;
+  }
+  
+  .separator {}
+  
+  .price-and-button {}
+  
+  .product-price {
+    font-size: 48px;
+  }
+  
+  .product-buy-button {}
+  
+  #product-add-to-cart iframe {}
+  
+  .track-list {}
+  
+  .track-list h3 {
+    font-size: 32px;
+  }
+  
+  .track-list ol {
+    font-size: 17px;
+  }
+  
+  .pressing-info h3 {
+    font-size: 20px;
+  }
+  
+  .pressing-info p {
+    font-size: 14px;
+  }
+  
+  .wide-separator {}
+}
+
+/* Mobile Media Query */
+@media (max-width: 768px) {
+  .product-section {}
+
+  .product-content-container {}
+  
+  .product-image {}
+  
+  .product-image img {}
+  
+  .product-details-container {}
+  
+  .product-title {}
+  
+  .product-artist {}
+  
+  .release-date {}
+  
+  .separator {}
+  
+  .price-and-button {}
+  
+  .product-price {}
+  
+  .product-buy-button {}
+  
+  #product-add-to-cart iframe {}
+  
+  .track-list {}
+  
+  .track-list h3 {}
+  
+  .track-list ol {}
+  
+  .pressing-info h3 {}
+  
+  .pressing-info p {}
+  
+  .wide-separator {}
 }
