--- a/store/store.css
+++ b/store/store.css
@@ -7,7 +7,7 @@
   align-items: center;
   overflow: hidden;
   position: relative;
-  padding: 40px 5vw;
+  padding: 60px 6vw;
 }
 
 .store-container {
@@ -153,7 +153,7 @@
 /* Laptop Media Query */
 @media (max-width: 1280px) {  
   .store-section {
-    padding: 40px 6vw;
+    padding: 60px 6vw;
   }
 
   .store-heading {
@@ -188,7 +188,7 @@
 /* Mobile Media Query */
 @media (max-width: 768px) {
   .store-section {
-    padding: clamp(1px, 9vw, 40px) clamp(1px, 13vw, 45px);
+    padding: 60px clamp(1px, 13vw, 45px);
   }
 
   .store-heading {
