--- a/store/mcr-002v/mcr-002.css
+++ b/store/mcr-002v/mcr-002.css
@@ -21,7 +21,7 @@
 
 .product-image {
   width: clamp(0px, 40vw, 650px);
-  height: clamp(0px, 40vw, 650px);
+  width: min(40vw, 650px);
   aspect-ratio: 1;
   border: solid 4px #0B1215;
   margin: 0;
@@ -33,7 +33,7 @@
 
 .product-image img {
   width: 100%;
-  height: 100%;
+  height: auto;
   object-fit: cover;
   transition: transform 0.2s ease-out;
 }
@@ -224,7 +224,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 0 40px;
+  padding: 0 3vw;
   position: relative;
   gap: 10px;
   margin-bottom: 60px;
@@ -425,7 +425,7 @@
   }
 
   .store-section {
-    padding: 0 45px;
+    padding: 0 5vw;
     margin-bottom: 40px;
   }
 
@@ -531,8 +531,8 @@
   }
 
   .store-section {
-    padding: 0 40px;
-    margin-bottom: 60px;
+    padding: 0 8vw;
+    margin-bottom: 50px;
   }
 
   .store-heading {
