--- a/cart/cart.css
+++ b/cart/cart.css
@@ -14,31 +14,39 @@
     position: fixed;
     top: 0;
     right: 60px;
-    font-family: "ringold-sans", sans-serif;
-    font-weight: 400;
-    font-size: 40px;
-    color: #F3F4F6;
     display: flex;
     flex-direction: column;
-    text-transform: uppercase;
     cursor: pointer;
     margin: 0;
     padding: 0;
     gap: 0;
-    transition: font-size 0.3s ease, transform 0.3s ease;
     text-align: center;
+    transition: font-size 0.3s ease, transform 0.3s ease;
 }
 
-/* Hover effect */
 .shopify-buy__cart-toggle:hover {
     transform: scale(1.1);
 }
 
-.shopify-buy__cart-toggle__title{
-    color: red;
+.shopify-buy__cart-toggle__count {
+    font-family: "ringold-sans", sans-serif;
+    font-weight: 400;
+    font-size: 20px;
+    color: #F3F4F6;
+    background-color: red;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 30px;
+    height: 30px;
+    align-self: flex-end;
 }
 
-
-.shopify-buy__cart-toggle__count{
-    color: red;
+.shopify-buy__cart-toggle__title{
+    font-family: "ringold-sans", sans-serif;
+    font-weight: 400;
+    font-size: 40px;
+    color: #F3F4F6;
+    text-transform: uppercase;
 }
