--- a/shared-styles/header.css
+++ b/shared-styles/header.css
@@ -49,7 +49,7 @@
   transform: scale(1.1);
 }
 
-.nav .cart-container {
+/* .nav .cart-container {
   display: flex;
   align-items: center;
   align-self: center;
@@ -111,7 +111,7 @@
 .shopify-buy__cart-toggle:hover .shopify-buy__cart-toggle__title {
   transform: scale(1.1);
   transform-origin: center center;
-}
+} */
 
 .hamburger-icon {
   margin-top: var(--rainbow-height);
@@ -167,7 +167,7 @@
     font-size: 30px;
   }
 
-  .nav .cart-container {
+  /* .nav .cart-container {
     margin: 0 20px 0 -14px;
   }
   
@@ -187,7 +187,7 @@
   
   .shopify-buy__cart-toggle__title{
     font-size: 31px !important;
-  }
+  } */
 }
 
 /* Mobile Media Query */
@@ -227,11 +227,12 @@
     opacity: 1;
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 40px;
     align-items: center;
     width: 100%;
     padding: 10px 0;
     transition: opacity 0.3s ease;
+    margin-bottom: 25px;
   }
 
   .nav.active {
@@ -243,7 +244,7 @@
     text-align: center;
   }
 
-  .nav .cart-container {
+  /* .nav .cart-container {
     margin: -22px 0px -11.5px 13.5px;
   }
   
@@ -263,7 +264,7 @@
   
   .shopify-buy__cart-toggle__title{
     font-size: 21px !important;
-  }
+  } */
 
   .hamburger-icon {
     visibility: visible;
