--- a/shared-styles/header.css
+++ b/shared-styles/header.css
@@ -35,6 +35,7 @@
   order: 3;
   display: flex;
   align-items: center;
+  margin: 0 60px 0 0;
 }
 
 .nav a {
@@ -161,6 +162,7 @@
 
   .nav {
     gap: 30px;
+    margin: 0 50px 0 0;
   }
 
   .nav a {
