--- a/home.css
+++ b/home.css
@@ -129,23 +129,27 @@
   transition: font-size 0.3s ease;
 }
 
-.pre-order {
-  margin-top: 80px;
-  background: none;
+.pre-order-button {
+  margin-top: 60px;
+  width: 254px;
+  height: 84px;
+  background-color: #f2f2f2;
   border: none;
+  border-radius: 50px;
   cursor: pointer;
-}
-
-.pre-order img {
-  width: 200px;
-  height: auto;
-  transition: width 0.3s ease;
+  font-family: "coolvetica", sans-serif;
+  font-weight: 400;
+  font-style: italic;
+  font-size: 32px;
+  color: #0B1215;
+  text-align: center;
   transition: transform 0.3s ease;
 }
 
-.pre-order:hover img{
+.pre-order-button:hover {
   transform: scale(1.1);
 }
+
 
 /* Store Section */
 .store-section {
@@ -342,12 +346,12 @@
     max-width: 450px;
   }
 
-  .pre-order {
+  .pre-order-button {
     margin-top: 100px;
-  }
-
-  .pre-order img {
-    width: 150px;
+    width: 200px;
+    height: 66px;
+    border-radius: 50px;
+    font-size: 26px;
   }
 
   .store-section {
@@ -457,12 +461,12 @@
     line-height: 1;
   }
 
-  .pre-order {
+  .pre-order-button {
     margin-top: 20px;
-  }
-
-  .pre-order img {
     width: 125px;
+    height: 40px;
+    border-radius: 30px;
+    font-size: 16px;
   }
 
   .store-section {
